--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                      <a href="#" data-filter="specials" class="filter__link">Специальные предложения</a>
                   </li>
                   <li class="filter__item">
-                     <a href="#" data-filter="soon" class="filter__link">Скоро в продаже</a>
+                     <a href="#" data-filter="soon" class="filter__link">Скорро в продаже</a>
                   </li>
                </ul>
                <ul class="products__list">
